# PowerHash_Development

PowerHash_Development/: README.md
bHashTest1.0/: CMakeLists.txt  HashBuckets.cpp  HashBuckets.h  KVBuffer.cpp  ReadMe  main.cpp  murmurhash.h
bHashTest10.0/: Accumulate.cpp  Accumulate.h  CMakeLists.txt  CountMin.cpp  CountMin.h  HashBuckets.cpp  HashBuckets.h  ReadMe  main.cpp
bHashTest11.0/: Accumulate.cpp  Accumulate.h  CMakeLists.txt  CountMin.cpp  CountMin.h  HashBuckets.cpp  HashBuckets.h  ReadMe  main.cpp
bHashTest11.1/: Accumulate.cpp  Accumulate.h  CMakeLists.txt  CountMin.cpp  CountMin.h  HashBuckets.cpp  KeyBuffer.h  ReadMe  main.cpp  murmurhash.cpp
bHashTest11.2/: Accumulate.cpp  Accumulate.h  CMakeLists.txt  CountMin.h  HashBuckets.cpp  HashBuckets.h  ReadMe  main.cpp
bHashTest12.0/: CMakeLists.txt  CountMin.cpp  HashBuckets.cpp  HashBuckets.h  Hyperloglog.cpp  ReadMe  main.cpp
bHashTest2.0/: CMakeLists.txt  CountMin.cpp  CountMin.h  HashBuckets.cpp  HashBuckets.h  ReadMe  main.cpp
bHashTest3.0/: CMakeLists.txt  HashBuckets.cpp  HashBuckets.h  KVBuffer.h  KeyBuffer.cpp  KeyBuffer.h  ReadMe  main.cpp
bHashTest4.0/: CMakeLists.txt  CountMin.cpp  CountMin.h  HashBuckets.cpp  HashBuckets.h  KeyBuffer.cpp  KeyBuffer.h  ReadMe  main.cpp  murmurhash.cpp  murmurhash.h
bHashTest5.0/: CMakeLists.txt  CountMin.cpp  CountMin.h  HashBuckets.cpp  HashBuckets.h  KVBuffer.cpp  KVBuffer.h  KeyBuffer.h  ReadMe  main.cpp
bHashTest6.0/: CMakeLists.txt  CountMin.cpp  CountMin.h  HashBuckets.cpp  HashBuckets.h  KeyBuffer.cpp  ReadMe  main.cpp  murmurhash.h  timer.h
bHashTest7.0/: CMakeLists.txt  CountMin.h  HashBuckets.cpp  KVBuffer.cpp  KVBuffer.h  KeyBuffer.cpp  ReadMe  main.cpp
bHashTest7.1/: CMakeLists.txt  KVBuffer.cpp  KeyBuffer.cpp  KeyBuffer.h  ReadMe  main.cpp
bHashTest7.2/: CMakeLists.txt  CountMin.cpp  KVBuffer.cpp  ReadMe  (+3 more)
bHashTest8.0/: Accumulate.cpp  Accumulate.h  CMakeLists.txt  CountMin.cpp  HashBuckets.cpp  ReadMe  main.cpp
(+59 files in other folders)
